# pcl_qr_segmentation

./: .gitignore  CMakeLists.txt  QRDetector.cpp  QRDetector.h  Util.h  main.cpp
